fix language server start